:wrench: Fix worksheet title not to overflow

--- a/app/assets/stylesheets/components/snippets.scss
+++ b/app/assets/stylesheets/components/snippets.scss
@@ -12,10 +12,12 @@
       border: 0;
       font-size: 16pt;
       margin: 20px 0 10px;
+      overflow: hidden;
     }
     h3 {
       font-size: 12pt;
       margin: 12px 0 6px;
+      overflow: hidden;
     }
   }
   .snippet-direct {
